Fix layout issues

--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -19,18 +19,20 @@
   border-radius: $border-radius;
   margin-top: 1em;
   margin-bottom: 1em;
-  padding: 1em 0.5em 1em 0.5em;
+  padding: 0em;
 
-  display: inline-flex;
-
+  display: flex;
   justify-content: center;
   align-content: center;
-  align-self: flex-start;
   align-items: center;
 
   @include breakpoint($large) {
   
     width: calc(#{$right-sidebar-width-narrow} - 1em);
+    display: inline-flex;
+    justify-self: center;
+
+    margin-bottom: 7em;
 /*     opacity: 0.75;
     -webkit-transition: opacity 0.2s ease-in-out;
     transition: opacity 0.2s ease-in-out; */
@@ -38,8 +40,6 @@
 /*     &:hover {
       opacity: 1;
     } */
-
-
 
 
     &.sticky {
@@ -64,6 +64,14 @@
     border-radius: $border-radius;
     margin-top: 1em;
     padding: 1em;
+    
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    //align-self: flex-start;
+    align-items: center;
   }
 
   h2,
@@ -71,6 +79,7 @@
   h4,
   h5,
   h6 {
+    text-align: center;
     margin-bottom: 0;
     font-family: $sans-serif-narrow;
   }
@@ -139,6 +148,7 @@
   display: flex;
   flex-direction: column;
   justify-content:center;
+  align-items: center;
   width: 36px;
   height: 36px;
 
@@ -160,6 +170,7 @@
     @include breakpoint($large) {
       align-self: center;
       justify-self: center;
+      width: 100%;
       padding: 5px;
       border: 1px solid $border-color;
     }
